--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,11 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
+#spring.datasource.url=jdbc:mysql://116.62.70.147:3306/ancaiyun?characterEncoding=utf8&useUnicode=true
+#spring.datasource.username=root
+#spring.datasource.password=ancaiyun_test
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
 
 
 mybatis.mapper-locations=classpath:mapper/*.xml
