--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,18 +2,19 @@ server.port=8083
 
 spring.application.name=micro-ancaiyun-material-server
 
+eureka.instance.prefer-ip-address=true
 eureka.instance.hostname=localhost
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
 
-spring.datasource.url=jdbc:mysql://192.168.13.239:3306/ancaiyun?characterEncoding=utf8&useUnicode=true
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-
-#spring.datasource.url=jdbc:mysql://116.62.70.147:3306/ancaiyun?characterEncoding=utf8&useUnicode=true
+#spring.datasource.url=jdbc:mysql://192.168.13.239:3306/ancaiyun?characterEncoding=utf8&useUnicode=true
 #spring.datasource.username=root
-#spring.datasource.password=ancaiyun_test
+#spring.datasource.password=root
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+spring.datasource.url=jdbc:mysql://116.62.70.147:3306/ancaiyun?characterEncoding=utf8&useUnicode=true
+spring.datasource.username=root
+spring.datasource.password=ancaiyun_test
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 
 
